sumo/tests/traci/VariableRetrieval/Route/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:26:23 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=166 varID=84 objID=xxx
.. Answered with error to command (166), [description: Route 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
